final changes: chabot fixed, added extra padding for mobile in addtodo form

--- a/src/common/TodoAddForm/TodoAddForm.module.css
+++ b/src/common/TodoAddForm/TodoAddForm.module.css
@@ -3,6 +3,7 @@
   display: grid;
   justify-content: center;
   align-items: center;
+  padding-bottom: 2rem;
 }
 
 .todoFormContainer {
@@ -20,6 +21,9 @@
 /* RESPONSIVENESS FOR LARGE SCREEN */
 
 @media (min-width: 768px) {
+  .todoForm {
+    padding-bottom: 0;
+  }
   .textField,
   .addButton {
     width: 60vw;
